# python_aoc

./: .gitignore  Makefile  pyproject.toml  requirements-dev.txt  requirements-test.txt
src/: app.py  class_app.py  day1_example.txt
tests/: test_app.py
