[tool.poetry]
name = "api-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
coverage = "^7.4.1"
pytest = "^8.0.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts= "-ra"
testpaths = [
    "tests"
]

[tool.coverage.run]
branch = true
source = [
    "src/"
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "if __name__ == .__main__.:",
    "@(abs\\.)?abstractmethod"
]
ignore_errors = true